--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                     <div class="portfolio-card__hashtag">
                         <span>#HTML</span>
                         <span>#CSS</span>
-                        <span>#JacaScript</span>
+                        <span>#JavaScript</span>
                     </div>
                     <div class="portfolio-card__actions">
                         <!-- <a href=""
