--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p>I love finding solutions to issues and implementing plans to minimize those issues. I'm passionate about finding out how things work and how I can use them. I love learning new technologies and ways I can improve almost everything I do. I also love helping others learn about code and how it can improve their life. </p>
                 <p><strong>I'm currently looking for a full-time role as a software engineer!</strong></p>
 
-                <a class="button" href="file:///C:/Users/medin/OneDrive/Desktop/New%20Resumes/Jose__Medina.pdf" download>
+                <a class="button" href="/Jose_Medina_SE.pdf" download>
                     <span class="button__icon">
                         <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
