--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form id="contactForm" action="#" class="contact-form" method="post">
+        <form data-netlify="true" id="contactForm" action="#" class="contact-form" method="post">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
