--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-project-link="https://example4.tld"
-                    data-project-details="/case-study/example-project-04">
+<!--                 <div class="portfolio-card" data-project-link="https://example4.tld"
+<!--                     data-project-details="/case-study/example-project-04">
                     <div class="portfolio-card__image">
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
                     </div>
@@ -541,8 +541,8 @@
                             <span>#react</span>
                             <span>#tailwind</span>
                             <span>#typescript</span>
-                        </div>
-                    </div>
+                        </div> -->
+<!--                     </div>
                 </div>
 
                 <div class="portfolio-card" data-project-link="https://example5.tld"
@@ -562,9 +562,9 @@
                             <span>#typescript</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="portfolio-card" data-project-link="https://example6.tld"
+<!--                 <div class="portfolio-card" data-project-link="https://example6.tld"
                     data-project-details="/case-study/example-project-06">
                     <div class="portfolio-card__image">
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
@@ -579,8 +579,8 @@
                             <span>#react</span>
                             <span>#tailwind</span>
                             <span>#typescript</span>
-                        </div>
-                    </div>
+                        </div> -->
+                    </div> -->
                 </div>
 
             </div>
