New project and updates

--- a/index.html
+++ b/index.html
@@ -469,21 +469,20 @@
                 </div>
             </div>
             <div class="portfolio-grid">
-                <div class="portfolio-card" data-project-link="https://example1.tld"
+                <div class="portfolio-card" data-project-link="https://dinnerfinder.netlify.app/"
                     data-project-details="/case-study/example-project-01">
                     <div class="portfolio-card__image">
-                        <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
+                        <img src="./assets/FoodApp.jpg" alt="Find your dinner recipe tonight!" />
                     </div>
                     <div class="portfolio-card__body">
-                        <div class="portfolio-card__heading">Super cool project</div>
-                        <p class="portfolio-card__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                            diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-                            voluptua.</p>
+                        <div class="portfolio-card__heading">Find your dinner recipe tonight!</div>
+                        <p class="portfolio-card__text">Looking for dinner ideas? Here is the app for you. Find recipes by searching for beef, chicken pork. Whatever your feeling tonight!
+                        </p>
                         <div class="portfolio-card__hashtag">
-                            <span>#uidesign</span>
-                            <span>#react</span>
-                            <span>#tailwind</span>
-                            <span>#typescript</span>
+                            <span>#HTML</span>
+                            <span>#CSS</span>
+                            <span>#JavaScript</span>
+                            <span>#API</span>
                         </div>
                     </div>
                 </div>
@@ -494,7 +493,7 @@
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
                     </div>
                     <div class="portfolio-card__body">
-                        <div class="portfolio-card__heading">Super cool project</div>
+                        <div class="portfolio-card__heading">Super cool project coming soon</div>
                         <p class="portfolio-card__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
                             voluptua.</p>
@@ -513,7 +512,7 @@
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
                     </div>
                     <div class="portfolio-card__body">
-                        <div class="portfolio-card__heading">Super cool project</div>
+                        <div class="portfolio-card__heading">Super cool project coming soon</div>
                         <p class="portfolio-card__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
                             voluptua.</p>
@@ -526,7 +525,7 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-project-link="https://example4.tld"
+                <!-- <div class="portfolio-card" data-project-link="https://example4.tld"
                     data-project-details="/case-study/example-project-04">
                     <div class="portfolio-card__image">
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
@@ -581,7 +580,7 @@
                             <span>#typescript</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
@@ -598,7 +597,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form id="contactForm" action="#" class="contact-form" method="post">
+        <form id="contactForm" action="#" class="contact-form" method="post" data-netlify="true">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
