--- a/index.html
+++ b/index.html
@@ -525,13 +525,8 @@
                     </div>
                 </div>
 
-<<<<<<< HEAD
                 <!-- <div class="portfolio-card" data-project-link="https://example4.tld"
                     data-project-details="/case-study/example-project-04">
-=======
-<!--                 <div class="portfolio-card" data-project-link="https://example4.tld"
-<!--                     data-project-details="/case-study/example-project-04">
->>>>>>> d46d1ee4ed5422be015ac03dbb57eddd9f89e2bc
                     <div class="portfolio-card__image">
                         <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
                     </div>
@@ -583,12 +578,11 @@
                             <span>#react</span>
                             <span>#tailwind</span>
                             <span>#typescript</span>
-<<<<<<< HEAD
                         </div>
                     </div>
                 </div> -->
-                        </div> -->
-                    </div> -->
+                        </div>
+                    </div> 
                 </div>
             </div>
         </div>
