--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="intro-text__wrapper">
             <div class="intro-text">
                 <p class="intro-text--primary">hi 👋 my name is <mark>Jose</mark> and I’m a software engineer.</p>
-                <p>I specialize in <mark>fullstack</mark> development with <mark>react</mark>, <mark>node</mark> and
-                    <mark>mongodb</mark>
+                <p>I specialize in <mark>fullstack</mark> development with <mark>JavaScript</mark>, <mark>react</mark>, <mark>node</mark> and
+                    <mark>MongoDB</mark>
                 </p>
                 <p>I'm available for work!</p>
             </div>
@@ -118,9 +118,10 @@
         <div class="container">
             <div class="biography">
                 <h2>Jose Medina</h2>
-                <p>Creative, detail-oriented, software engineer with a deep interest in Cloud. Proven track record of creating and
-                implementing successful front and back-end web applications. Looking to bring my skills to a tech company with global
-                reach.</p>
+                <p>Creative, detail-oriented, software engineer with a deep experience in
+                operations and account management. Proven track record of client
+                relations, sales, and implementation of successful web applications.
+                Looking to bring my skills to a tech company with global reach.</p>
                 <p>I love finding solutions to issues and implementing plans to minimize those issues. I'm passionate about finding out how things work and how I can use them. I love learning new technologies and ways I can improve almost everything I do. I also love helping others learn about code and how it can improve their life. </p>
                 <p><strong>I'm currently looking for a full-time role as a software engineer!</strong></p>
 
@@ -148,9 +149,9 @@
                     <ul>
                         <li>Website Creation</li>
                         <li>Web Applications</li>
-                        <li>Fullstack Webdevelopment</li>
+                        <li>Fullstack Web Development</li>
                         <li>Node</li>
-                        <li>mongoDB</li>
+                        <li>MongoDB</li>
                     </ul>
                 </div>
                 <div class="stack">
