--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
             - or -
         </div>
         <form id="contactForm" action="#" class="contact-form" method="post" data-netlify="true">
-        <form data-netlify="true" id="contactForm" action="#" class="contact-form" method="post">
+        <form netlify id="contactForm" action="#" class="contact-form" method="post">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
