--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form id="contactForm" name="contact" class="contact-form" method="post" data-netlify="true">
+        <form id="contactForm" name="contactForm" class="contact-form" method="post" data-netlify="true">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
