--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form id="contactForm" name="formContact" class="contact-form" method="post" data-netlify="true">
+        <form id="contactForm" name="contact-form" class="contact-form" method="post" data-netlify="true">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
@@ -610,7 +610,7 @@
                 <input type="email" inputmode="email" autocomplete="email" id="inpEmail" name="email"
                     placeholder="john.doe@example.com" />
             </div>
-            <!-- <div class="form-group">
+            <div class="form-group">
                 <label for="inpSubject">What do you want to talk about?</label>
                 <select id="inpSubject" name="subject">
                     <option disabled>Please choose</option>
@@ -618,7 +618,7 @@
                     <option value="chat">Grab a virtual cup of coffee</option>
                     <option value="praise">Sick portfolio you've got there!</option>
                 </select>
-            </div> -->
+            </div>
             <div class="form-group">
                 <label for="inpMessage">Your message to me</label>
                 <textarea id="inpMessage" name="message"></textarea>
