--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form data-netlify="true" id="contactForm" name="contacting-form" class="contact-form" method="POST">
+        <form data-netlify="true" id="contactForm" name="contacting-form" class="contact-form" method="POST" action="mailto:jm248248@gmail.com">
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
