--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="intro-image__wrapper">
-            <img class="intro-image" src="" alt="" />
+            <img class="intro-image" src="/assets/HeadshotForWebsite.svg" alt="" />
         </div>
     </div>
     <div id="about" class="about-me background--dark section">
@@ -488,21 +488,18 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card" data-project-link="https://example2.tld"
+                <div class="portfolio-card" data-project-link="https://main--react-trackyourtasks.netlify.app/"
                     data-project-details="/case-study/example-project-02">
                     <div class="portfolio-card__image">
-                        <img src="./assets/project.svg" alt="super awesome project that I'm proud to showcase here" />
+                        <img src="./assets/task-tracker.png" alt="super awesome project that I'm proud to showcase here" />
                     </div>
                     <div class="portfolio-card__body">
-                        <div class="portfolio-card__heading">Super cool project coming soon</div>
-                        <p class="portfolio-card__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                            diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-                            voluptua.</p>
+                        <div class="portfolio-card__heading">React Task Tracker App</div>
+                        <p class="portfolio-card__text">A react application to keep track of your tasks. You can create a task set to a day and time. Also click on the task to highlight as done.</p>
                         <div class="portfolio-card__hashtag">
-                            <span>#uidesign</span>
-                            <span>#react</span>
-                            <span>#tailwind</span>
-                            <span>#typescript</span>
+                            <span>#React</span>
+                            <span>#Javascript</span>
+                            <span>#JSX</span>
                         </div>
                     </div>
                 </div>
@@ -600,7 +597,7 @@
         <div class="contact-spacer">
             - or -
         </div>
-        <form data-netlify="true" id="contactForm" name="contacting-form" class="contact-form" method="POST">
+        <form method='POST' action='https://getform.io/f/0fc708cb-b0ce-4b66-b176-1b1585f9aa8b' id="contactForm" name="contacting-form" class="contact-form" >
             <div class="form-group">
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
