--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
             </div>
-            <div class="form-group">
+            <form class="form-group" method='POST' action='https://getform.io/f/0fc708cb-b0ce-4b66-b176-1b1585f9aa8b'>
                 <label for="inpName">Your Email</label>
                 <input type="email" inputmode="email" autocomplete="email" id="inpEmail" name="email"
                     placeholder="john.doe@example.com" />
@@ -621,6 +621,7 @@
             <p>
                 <button class="button button--primary button--block button--small" type="submit">Send message</button>
             </p>
+        </form>
     </div>
     <footer class="footer background--dark">
         <div class="container">
