--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@
             <p>
                 <button class="button button--primary button--block button--small" type="submit">Send message</button>
             </p>
+            </form>
         </form>
     </div>
     <footer class="footer background--dark">
