--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <p>I love finding solutions to issues and implementing plans to minimize those issues. I'm passionate about finding out how things work and how I can use them. I love learning new technologies and ways I can improve almost everything I do. I also love helping others learn about code and how it can improve their life. </p>
                 <p><strong>I'm currently looking for a full-time role as a software engineer!</strong></p>
 
-                <a class="button" href="https://docs.google.com/document/d/18aMBwOY9RVOdNNbsv5HxqlfmIq3cbhzy/edit?usp=sharing&ouid=100846554713360415523&rtpof=true&sd=true" download>
+                <a class="button" href="/Jose_Medina_SE.pdf" download>
                     <span class="button__icon">
                         <svg viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -515,6 +515,7 @@
                             diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
                             voluptua.</p>
                         <div class="portfolio-card__hashtag">
+                            <span>#uidesign</span>
                             <span>#react</span>
                             <span>#tailwind</span>
                             <span>#typescript</span>
@@ -601,7 +602,7 @@
                 <label for="inpName">Your Name</label>
                 <input type="text" autocomplete="name" id="inpName" name="name" placeholder="John Doe" />
             </div>
-            <form class="form-group" method='POST' action='https://getform.io/f/0fc708cb-b0ce-4b66-b176-1b1585f9aa8b'>
+            <div class="form-group">
                 <label for="inpName">Your Email</label>
                 <input type="email" inputmode="email" autocomplete="email" id="inpEmail" name="email"
                     placeholder="john.doe@example.com" />
@@ -618,97 +619,89 @@
                 <label for="inpMessage">Your message to me</label>
                 <textarea id="inpMessage" name="message"></textarea>
             </div>
-            <p>
                 <button class="button button--primary button--block button--small" type="submit">Send message</button>
-            </p>
-            </form>
+            </div>
         </form>
-    </div>
     <footer class="footer background--dark">
         <div class="container">
             <!-- <div class="credits">
-                    Built with <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M14.9639 8.51319L8.30068 15.1124L1.63746 8.51319H14.9639ZM1.63746 8.51319C1.19796 8.08552 0.851775 7.57147 0.620699 7.00343C0.389624 6.43539 0.278666 5.82565 0.294814 5.21262C0.310962 4.59959 0.453866 3.99655 0.714526 3.44146C0.975186 2.88637 1.34796 2.39126 1.80936 1.98731C2.27077 1.58337 2.81082 1.27933 3.3955 1.09436C3.98018 0.909378 4.59682 0.847464 5.20661 0.912513C5.81639 0.977561 6.4061 1.16816 6.9386 1.47232C7.47111 1.77647 7.93486 2.18758 8.30068 2.67977C8.66807 2.19116 9.13237 1.78363 9.6645 1.48271C10.1966 1.18178 10.7852 0.993935 11.3932 0.93092C12.0013 0.867904 12.6158 0.931078 13.1984 1.11649C13.7809 1.3019 14.3189 1.60555 14.7787 2.00844C15.2385 2.41134 15.6102 2.9048 15.8705 3.45794C16.1308 4.01108 16.2741 4.612 16.2915 5.22308C16.3089 5.83417 16.1999 6.44226 15.9715 7.00931C15.7431 7.57635 15.4 8.09015 14.9639 8.51853"
-                            fill="var(--accent)" />
-                    </svg>
-                    and <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0.962667 3.58166e-06H10.5929C10.719 -0.000334572 10.8439 0.023275 10.9605 0.0694843C11.0771 0.115694 11.1831 0.183598 11.2725 0.26932C11.3619 0.355042 11.4329 0.456902 11.4815 0.569086C11.53 0.68127 11.5552 0.80158 11.5556 0.923146V8.30743C11.5556 10.3474 9.83111 12 7.704 12H3.85155C1.72444 12 0 10.3466 0 8.30743V0.923146C0.000349706 0.80158 0.0255273 0.68127 0.0740952 0.569086C0.122663 0.456902 0.19367 0.355042 0.283062 0.26932C0.372454 0.183598 0.47848 0.115694 0.595087 0.0694843C0.711694 0.023275 0.836597 -0.000334572 0.962667 3.58166e-06Z"
-                            fill="var(--accent)" />
-                        <path
-                            d="M11.5555 2.57129H13.7778C15.0044 2.57129 16 3.467 16 4.571V6.57157C16 7.67557 15.0044 8.57129 13.7778 8.57129H11.5555"
-                            stroke="var(--accent)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                    by <strong>sam<mark>//</mark>doe</strong>
-                </div> -->
+                Built with <svg width="17" height="16" viewBox="0 0 17 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M14.9639 8.51319L8.30068 15.1124L1.63746 8.51319H14.9639ZM1.63746 8.51319C1.19796 8.08552 0.851775 7.57147 0.620699 7.00343C0.389624 6.43539 0.278666 5.82565 0.294814 5.21262C0.310962 4.59959 0.453866 3.99655 0.714526 3.44146C0.975186 2.88637 1.34796 2.39126 1.80936 1.98731C2.27077 1.58337 2.81082 1.27933 3.3955 1.09436C3.98018 0.909378 4.59682 0.847464 5.20661 0.912513C5.81639 0.977561 6.4061 1.16816 6.9386 1.47232C7.47111 1.77647 7.93486 2.18758 8.30068 2.67977C8.66807 2.19116 9.13237 1.78363 9.6645 1.48271C10.1966 1.18178 10.7852 0.993935 11.3932 0.93092C12.0013 0.867904 12.6158 0.931078 13.1984 1.11649C13.7809 1.3019 14.3189 1.60555 14.7787 2.00844C15.2385 2.41134 15.6102 2.9048 15.8705 3.45794C16.1308 4.01108 16.2741 4.612 16.2915 5.22308C16.3089 5.83417 16.1999 6.44226 15.9715 7.00931C15.7431 7.57635 15.4 8.09015 14.9639 8.51853"
+                        fill="var(--accent)" />
+                </svg>
+                and <svg width="17" height="12" viewBox="0 0 17 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M0.962667 3.58166e-06H10.5929C10.719 -0.000334572 10.8439 0.023275 10.9605 0.0694843C11.0771 0.115694 11.1831 0.183598 11.2725 0.26932C11.3619 0.355042 11.4329 0.456902 11.4815 0.569086C11.53 0.68127 11.5552 0.80158 11.5556 0.923146V8.30743C11.5556 10.3474 9.83111 12 7.704 12H3.85155C1.72444 12 0 10.3466 0 8.30743V0.923146C0.000349706 0.80158 0.0255273 0.68127 0.0740952 0.569086C0.122663 0.456902 0.19367 0.355042 0.283062 0.26932C0.372454 0.183598 0.47848 0.115694 0.595087 0.0694843C0.711694 0.023275 0.836597 -0.000334572 0.962667 3.58166e-06Z"
+                        fill="var(--accent)" />
+                    <path
+                        d="M11.5555 2.57129H13.7778C15.0044 2.57129 16 3.467 16 4.571V6.57157C16 7.67557 15.0044 8.57129 13.7778 8.57129H11.5555"
+                        stroke="var(--accent)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                by <strong>sam<mark>//</mark>doe</strong>
+            </div> -->
             <div class="socials">
                 <span>Follow me on my socials</span>
                 <div class="social-icon__wrapper">
-                    <a class="social-icon" href="https://twitter.com/JoseMedina2424" target="_blank"><i
-                            class="fa-brands fa-twitter fa-2xl"></i>
+                    <a class="social-icon" href="https://twitter.com/JoseMedina2424" target="_blank"><i class="fa-brands fa-twitter fa-2xl" ></i>
                         <!-- <svg viewBox="0 0 24 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M24 0.514311C22.8 1.10231 21.624 1.34111 20.4 1.70231C19.0548 0.184311 17.0604 0.100311 15.144 0.817911C13.2276 1.53551 11.9724 3.28991 12 5.30231V6.50231C8.106 6.60191 4.638 4.82831 2.4 1.70231C2.4 1.70231 -2.6184 10.6219 7.2 14.9023C4.9536 16.3987 2.7132 17.4079 0 17.3023C3.9696 19.4659 8.2956 20.2099 12.0408 19.1227C16.3368 17.8747 19.8672 14.6551 21.222 9.83231C21.6261 8.36552 21.8268 6.85014 21.8184 5.32871C21.816 5.02991 23.6304 2.00231 24 0.513111V0.514311Z"
-                                    fill="currentColor" />
-                            </svg> -->
+                            <path
+                                d="M24 0.514311C22.8 1.10231 21.624 1.34111 20.4 1.70231C19.0548 0.184311 17.0604 0.100311 15.144 0.817911C13.2276 1.53551 11.9724 3.28991 12 5.30231V6.50231C8.106 6.60191 4.638 4.82831 2.4 1.70231C2.4 1.70231 -2.6184 10.6219 7.2 14.9023C4.9536 16.3987 2.7132 17.4079 0 17.3023C3.9696 19.4659 8.2956 20.2099 12.0408 19.1227C16.3368 17.8747 19.8672 14.6551 21.222 9.83231C21.6261 8.36552 21.8268 6.85014 21.8184 5.32871C21.816 5.02991 23.6304 2.00231 24 0.513111V0.514311Z"
+                                fill="currentColor" />
+                        </svg> -->
                     </a>
-                    <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/jose-medina-9a23541b2/"
-                        target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i>
+                    <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/jose-medina-9a23541b2/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i>
                         <!-- <svg viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M2 17.9851V1.98511H8C9.06087 1.98511 10.0783 2.40653 10.8284 3.15668C11.5786 3.90683 12 4.92424 12 5.98511C12 7.04597 11.5786 8.06339 10.8284 8.81354C10.0783 9.56368 9.06087 9.98511 8 9.98511C9.06087 9.98511 10.0783 10.4065 10.8284 11.1567C11.5786 11.9068 12 12.9242 12 13.9851C12 15.046 11.5786 16.0634 10.8284 16.8135C10.0783 17.5637 9.06087 17.9851 8 17.9851H2Z"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M2 9.98511H8" stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path
-                                    d="M16.6667 11.3185H26C26 10.0808 25.5083 8.89386 24.6332 8.01869C23.758 7.14352 22.571 6.65186 21.3333 6.65186C20.0956 6.65186 18.9087 7.14352 18.0335 8.01869C17.1583 8.89386 16.6667 10.0808 16.6667 11.3185V13.9852C16.8042 14.9834 17.2611 15.9103 17.9692 16.6273C18.6772 17.3443 19.5983 17.8128 20.5947 17.9629C21.5911 18.1129 22.6093 17.9364 23.4971 17.4598C24.3849 16.9832 25.0946 16.232 25.52 15.3185"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M19.3333 1.98511H23.3333" stroke="currentColor" stroke-width="2.75"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg> -->
+                            <path
+                                d="M2 17.9851V1.98511H8C9.06087 1.98511 10.0783 2.40653 10.8284 3.15668C11.5786 3.90683 12 4.92424 12 5.98511C12 7.04597 11.5786 8.06339 10.8284 8.81354C10.0783 9.56368 9.06087 9.98511 8 9.98511C9.06087 9.98511 10.0783 10.4065 10.8284 11.1567C11.5786 11.9068 12 12.9242 12 13.9851C12 15.046 11.5786 16.0634 10.8284 16.8135C10.0783 17.5637 9.06087 17.9851 8 17.9851H2Z"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M2 9.98511H8" stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M16.6667 11.3185H26C26 10.0808 25.5083 8.89386 24.6332 8.01869C23.758 7.14352 22.571 6.65186 21.3333 6.65186C20.0956 6.65186 18.9087 7.14352 18.0335 8.01869C17.1583 8.89386 16.6667 10.0808 16.6667 11.3185V13.9852C16.8042 14.9834 17.2611 15.9103 17.9692 16.6273C18.6772 17.3443 19.5983 17.8128 20.5947 17.9629C21.5911 18.1129 22.6093 17.9364 23.4971 17.4598C24.3849 16.9832 25.0946 16.232 25.52 15.3185"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M19.3333 1.98511H23.3333" stroke="currentColor" stroke-width="2.75"
+                                stroke-linecap="round" stroke-linejoin="round" />
+                        </svg> -->
                     </a>
-                    <a class="social-icon" href="https://github.com/JoseMedina24" target="_blank"><i
-                            class="fa-brands fa-github fa-2xl"></i>
+                    <a class="social-icon" href="https://github.com/JoseMedina24" target="_blank"><i class="fa-brands fa-github fa-2xl"></i>
                         <!-- <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M8.66675 2.6665C14.2223 9.33317 16.4445 14.3332 17.0001 20.6665"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M5.77777 19.7779C9.66666 15.889 12.4444 12.5557 21.8889 12.6668"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M2.11108 10.611C7.66664 10.611 13.0155 10.1888 19.1266 5.05542"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg> -->
+                            <path
+                                d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M8.66675 2.6665C14.2223 9.33317 16.4445 14.3332 17.0001 20.6665"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M5.77777 19.7779C9.66666 15.889 12.4444 12.5557 21.8889 12.6668"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M2.11108 10.611C7.66664 10.611 13.0155 10.1888 19.1266 5.05542"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                        </svg> -->
                     </a>
-                    <a class="social-icon" href="mailto:jm248248@gmail.com" target="_blank"><i
-                            class="fa-solid fa-envelope fa-2xl"></i>
+                    <a class="social-icon" href="mailto:jm248248@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-2xl"></i>
                         <!-- <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M16 4H8C5.79086 4 4 5.79086 4 8V16C4 18.2091 5.79086 20 8 20H16C18.2091 20 20 18.2091 20 16V8C20 5.79086 18.2091 4 16 4Z"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path
-                                    d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
-                                    stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M16.5 7.5V7.501" stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
-                                    stroke-linejoin="round" /> -->
+                            <path
+                                d="M16 4H8C5.79086 4 4 5.79086 4 8V16C4 18.2091 5.79086 20 8 20H16C18.2091 20 20 18.2091 20 16V8C20 5.79086 18.2091 4 16 4Z"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path
+                                d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z"
+                                stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M16.5 7.5V7.501" stroke="currentColor" stroke-width="2.75" stroke-linecap="round"
+                                stroke-linejoin="round" /> -->
                         <!-- </svg> -->
                     </a>
                 </div>
             </div>
         </div>
     </footer>
-    
     <div class="project-overlay-content"></div>
     
 </body>
