--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="intro-image__wrapper">
-            <img class="intro-image" src="/assets/HeadshotForWebsite.svg" alt="" />
+            <img class="intro-image" src="/assets/Untitled design.svg" alt="" />
         </div>
     </div>
     <div id="about" class="about-me background--dark section">
